# src/Services/CookBook/CookBook.Application/Recipes/Commands/CreateRecipe/CreateRecipeCommandValidator.cs
@@ -1,4 +1,7 @@
-﻿using System.Data;
+﻿using System;
+using System.Collections.Generic;
+using System.Data;
+using System.Linq;
 using FluentValidation;
 
 namespace Culina.CookBook.Application.Recipes.Commands.CreateRecipe
@@ -25,6 +28,9 @@ namespace Culina.CookBook.Application.Recipes.Commands.CreateRecipe
 
             RuleFor(c => c.Steps)
                 .Must(x => x.Count > 0);
+            
+            RuleForEach(c => c.Steps)
+                .SetValidator(new CreateRecipeCommandRecipeStepValidator());
 
             RuleForEach(c => c.Steps)
                 .NotEmpty();
@@ -37,34 +43,82 @@ namespace Culina.CookBook.Application.Recipes.Commands.CreateRecipe
 
             RuleForEach(c => c.Metadata)
                 .SetValidator(new CreateRecipeCommandRecipeMetadataValidator());
+
+            RuleFor(c => c.Metadata)
+                .Must(c =>
+                    c.Distinct(new CreateRecipeCommandRecipeMetadataComparer()).Count() == c.Count)
+                .WithMessage("The metadata elements are not unique.");
+
+            RuleFor(c => c.ImageUrls)
+                .Must(c =>
+                    c == null || c.Distinct().Count() == c.Count)
+                .WithMessage("The image urls are not unique.");
+            
+            RuleForEach(c => c.ImageUrls)
+                .SetValidator(new CreateRecipeCommandRecipeImageUrlValidator());
         }
-    }
-
-    public class CreateRecipeCommandRecipeIngredientValidator : AbstractValidator<CreateRecipeCommandRecipeIngredient>
-    {
-        public CreateRecipeCommandRecipeIngredientValidator()
+        
+        private class CreateRecipeCommandRecipeIngredientValidator : AbstractValidator<CreateRecipeCommandRecipeIngredient>
         {
-            RuleFor(c => c.Quantity)
-                .MaximumLength(32);
+            public CreateRecipeCommandRecipeIngredientValidator()
+            {
+                RuleFor(c => c.Quantity)
+                    .MaximumLength(32);
 
-            RuleFor(c => c.Part)
-                .NotEmpty()
-                .MaximumLength(128);
+                RuleFor(c => c.Part)
+                    .NotEmpty()
+                    .MaximumLength(128);
 
-            RuleFor(c => c.Type)
-                .MaximumLength(128);
+                RuleFor(c => c.Type)
+                    .MaximumLength(128);
+            }
         }
-    }
 
-    public class CreateRecipeCommandRecipeMetadataValidator : AbstractValidator<CreateRecipeCommandRecipeMetadata>
-    {
-        public CreateRecipeCommandRecipeMetadataValidator()
+        private class CreateRecipeCommandRecipeMetadataValidator : AbstractValidator<CreateRecipeCommandRecipeMetadata>
         {
-            RuleFor(c => c.Type)
-                .MaximumLength(64);
+            public CreateRecipeCommandRecipeMetadataValidator()
+            {
+                RuleFor(c => c.Type)
+                    .MaximumLength(64);
 
-            RuleFor(c => c.Value)
-                .MaximumLength(128);
+                RuleFor(c => c.Value)
+                    .MaximumLength(128);
+            }
+        }
+    
+        private class CreateRecipeCommandRecipeMetadataComparer : IEqualityComparer<CreateRecipeCommandRecipeMetadata>
+        {
+            public bool Equals(CreateRecipeCommandRecipeMetadata x, CreateRecipeCommandRecipeMetadata y)
+            {
+                if (ReferenceEquals(x, y)) return true;
+                if (ReferenceEquals(x, null)) return false;
+                if (ReferenceEquals(y, null)) return false;
+                if (x.GetType() != y.GetType()) return false;
+                return x.Type == y.Type;
+            }
+
+            public int GetHashCode(CreateRecipeCommandRecipeMetadata obj)
+            {
+                return HashCode.Combine(obj.Type);
+            }
+        }
+        
+        private class CreateRecipeCommandRecipeStepValidator : AbstractValidator<string>
+        {
+            public CreateRecipeCommandRecipeStepValidator()
+            {
+                RuleFor(c => c)
+                    .MaximumLength(512);
+            }
+        }
+        
+        private class CreateRecipeCommandRecipeImageUrlValidator : AbstractValidator<string>
+        {
+            public CreateRecipeCommandRecipeImageUrlValidator()
+            {
+                RuleFor(c => c)
+                    .MaximumLength(1024);
+            }
         }
     }
 }
