# src/Services/CookBook/CookBook.Application/Recipes/Commands/CreateRecipe/CreateRecipeResponse.cs
@@ -20,14 +20,20 @@ namespace Culina.CookBook.Application.Recipes.Commands.CreateRecipe
         public IList<CreateRecipeResponseRecipeStep> Steps { get; set; }
         public IList<CreateRecipeResponseRecipeIngredient> Ingredients { get; set; }
         
+        public IList<CreateRecipeResponseRecipeImage> Images { get; set; }
         public IList<CreateRecipeResponseRecipeMetadata> Metadata { get; set; }
         
         public void Mapping(Profile profile)
         {
             profile.CreateMap<Recipe, CreateRecipeResponse>()
-                .ForMember(d => d.Metadata, 
+                .ForMember(d => d.Metadata,
                     opt =>
-                        opt.Condition(((src, dest, srcMember) => srcMember != null && srcMember.Count > 0)));
+                        opt.Condition(((src, dest,
+                            srcMember) => srcMember != null && srcMember.Count > 0)))
+                .ForMember(d => d.Images,
+                    opt =>
+                        opt.Condition(((src, dest,
+                            srcMember) => srcMember != null && srcMember.Count > 0)));
         }
     }
 
@@ -45,20 +51,36 @@ namespace Culina.CookBook.Application.Recipes.Commands.CreateRecipe
         public Guid? IngredientId { get; set; }
         public string Quantity { get; set; }
         public string Part { get; set; }
-        
-        public CreateRecipeResponseIngredient Ingredient { get; set; }
-    }
-    
-    public class CreateRecipeResponseIngredient : IMapFrom<Ingredient>
-    {
-        public Guid Id { get; set; }
         public string IngredientName { get; set; }
+        
+        public void Mapping(Profile profile)
+        {
+            profile.CreateMap<RecipeIngredient, CreateRecipeResponseRecipeIngredient>()
+                .ForMember(d => d.IngredientName,
+                    opt =>
+                        opt.MapFrom(src => src.Ingredient.IngredientName));
+        }
     }
-    
+
     public class CreateRecipeResponseRecipeMetadata : IMapFrom<RecipeMetadata>
     {
         public Guid RecipeId { get; set; }
         public string Type { get; set; }
         public string Value { get; set; }
+    }
+
+    public class CreateRecipeResponseRecipeImage : IMapFrom<RecipeImage>
+    {
+        public Guid RecipeId { get; set; }
+        public Guid ImageId { get; set; }
+        public string Url { get; set; }
+        
+        public void Mapping(Profile profile)
+        {
+            profile.CreateMap<RecipeImage, CreateRecipeResponseRecipeImage>()
+                .ForMember(d => d.Url,
+                    opt =>
+                        opt.MapFrom(src => src.Image.Url));
+        }
     }
 }
