# src/Services/CookBook/CookBook.Application/Recipes/Queries/GetRecipe/GetRecipeResponse.cs
@@ -21,13 +21,19 @@ namespace Culina.CookBook.Application.Recipes.Queries.GetRecipe
         public IList<GetRecipeResponseRecipeIngredient> Ingredients { get; set; }
         
         public IList<GetRecipeResponseRecipeMetadata> Metadata { get; set; }
+        public IList<GetRecipeResponseRecipeImage> Images { get; set; }
         
         public void Mapping(Profile profile)
         {
             profile.CreateMap<Recipe, GetRecipeResponse>()
                 .ForMember(d => d.Metadata, 
                     opt =>
-                        opt.Condition(((src, dest, srcMember) => srcMember != null && srcMember.Count > 0)));
+                        opt.Condition(((src, dest, srcMember) => 
+                            srcMember != null && srcMember.Count > 0)))
+                .ForMember(d => d.Images,
+                    opt =>
+                        opt.Condition(((src, dest,
+                            srcMember) => srcMember != null && srcMember.Count > 0)));
         }
     }
 
@@ -45,20 +51,36 @@ namespace Culina.CookBook.Application.Recipes.Queries.GetRecipe
         public Guid? IngredientId { get; set; }
         public string Quantity { get; set; }
         public string Part { get; set; }
-
-        public GetRecipeResponseIngredient Ingredient { get; set; }
-    }
-
-    public class GetRecipeResponseIngredient : IMapFrom<Ingredient>
-    {
-        public Guid Id { get; set; }
         public string IngredientName { get; set; }
+        
+        public void Mapping(Profile profile)
+        {
+            profile.CreateMap<RecipeIngredient, GetRecipeResponseRecipeIngredient>()
+                .ForMember(d => d.IngredientName,
+                    opt =>
+                        opt.MapFrom(src => src.Ingredient.IngredientName));
+        }
     }
-    
+
     public class GetRecipeResponseRecipeMetadata : IMapFrom<RecipeMetadata>
     {
         public Guid RecipeId { get; set; }
         public string Type { get; set; }
         public string Value { get; set; }
+    }
+    
+    public class GetRecipeResponseRecipeImage : IMapFrom<RecipeImage>
+    {
+        public Guid RecipeId { get; set; }
+        public Guid ImageId { get; set; }
+        public string Url { get; set; }
+        
+        public void Mapping(Profile profile)
+        {
+            profile.CreateMap<RecipeImage, GetRecipeResponseRecipeImage>()
+                .ForMember(d => d.Url,
+                    opt =>
+                        opt.MapFrom(src => src.Image.Url));
+        }
     }
 }
